// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCssColorVariables > should create css variables for dark mode 1`] = `
{
  "--sd-black": "#000",
  "--sd-black-20": "rgba(0, 0, 0, 0.2)",
  "--sd-black-50": "rgba(0, 0, 0, 0.5)",
  "--sd-blue-10": "rgba(0, 112, 245, 0.1)",
  "--sd-blue-100": "#A8D1FF",
  "--sd-blue-200": "#66ADFF",
  "--sd-blue-30": "rgba(0, 112, 245, 0.3)",
  "--sd-blue-300": "#0070F5",
  "--sd-blue-400": "#0063DB",
  "--sd-blue-50": "#0E2947",
  "--sd-blue-500": "#55ADFF",
  "--sd-blue-75": "#CCE5FF",
  "--sd-dark-100": "#6E7A8A",
  "--sd-dark-200": "#6A707C",
  "--sd-dark-30": "rgba(143, 148, 158, 0.3)",
  "--sd-dark-300": "#AEB4BD",
  "--sd-dark-400": "#323C4E",
  "--sd-dark-450": "#222F44",
  "--sd-dark-50": "rgba(25, 35, 52, 0.5)",
  "--sd-dark-500": "#FFFFFF",
  "--sd-green-100": "#90EAAE",
  "--sd-green-200": "#5DDA87",
  "--sd-green-30": "rgba(3, 135, 47, 0.3)",
  "--sd-green-300": "#03872F",
  "--sd-green-400": "#1E8F46",
  "--sd-green-50": "#092E16",
  "--sd-green-500": "#5EE18A",
  "--sd-green-75": "#C8F4D1",
  "--sd-grey-100": "#8F949E",
  "--sd-grey-200": "#6A707C",
  "--sd-grey-300": "#5B6371",
  "--sd-grey-400": "#323C4E",
  "--sd-grey-450": "#222F44",
  "--sd-grey-500": "#192334",
  "--sd-purple-100": "#CBC8EE",
  "--sd-purple-200": "#A7A1E8",
  "--sd-purple-300": "#6559CF",
  "--sd-purple-400": "#473ABB",
  "--sd-purple-50": "#262247",
  "--sd-purple-500": "#BFA0FF",
  "--sd-purple-75": "#DCDBF5",
  "--sd-red-10": "rgba(195, 25, 9, 0.1)",
  "--sd-red-100": "#FDC2BA",
  "--sd-red-200": "#FE988B",
  "--sd-red-30": "rgba(229, 35, 13, 0.3)",
  "--sd-red-300": "#E5230D",
  "--sd-red-300-aplha-20": "rgba(233, 27, 12, 0.3)",
  "--sd-red-400": "#D9210D",
  "--sd-red-50": "#3D0A06",
  "--sd-red-500": "#FF6359",
  "--sd-red-75": "#FDD9D3",
  "--sd-silver-100": "#F6F7F8",
  "--sd-silver-200": "#0D1017",
  "--sd-silver-30": "rgba(225, 229, 234, 0.3)",
  "--sd-silver-300": "#E8ECF0",
  "--sd-silver-400": "#30373D",
  "--sd-silver-400-alpha-30": "rgba(48, 55, 61, 0.3)",
  "--sd-silver-500": "#47505B",
  "--sd-teal-100": "#91E3F8",
  "--sd-teal-200": "#61D3EF",
  "--sd-teal-300": "#007EAB",
  "--sd-teal-400": "#008DB8",
  "--sd-teal-50": "#11333D",
  "--sd-teal-500": "#31C7F5",
  "--sd-teal-75": "#BEEDF9",
  "--sd-transparent": "rgba(0, 0, 0, 0)",
  "--sd-white": "#151B22",
  "--sd-white-08": "rgba(21, 27, 34, 0.08)",
  "--sd-white-10": "rgba(21, 27, 34, 0.1)",
  "--sd-white-20": "rgba(21, 27, 34, 0.2)",
  "--sd-white-40": "rgba(21, 27, 34, 0.4)",
  "--sd-white-50": "rgba(21, 27, 34, 0.5)",
  "--sd-yellow-100": "#FFE494",
  "--sd-yellow-200": "#FFDC6B",
  "--sd-yellow-300": "#E8671C",
  "--sd-yellow-400": "#FFA91F",
  "--sd-yellow-50": "#33200A",
  "--sd-yellow-500": "#FCA542",
  "--sd-yellow-75": "#FFF1C2",
}
`;

exports[`createCssColorVariables > should create css variables for light mode 1`] = `
{
  "--sd-black": "#000",
  "--sd-black-20": "rgba(0, 0, 0, 0.2)",
  "--sd-black-50": "rgba(0, 0, 0, 0.5)",
  "--sd-blue-10": "rgba(0, 112, 245, 0.1)",
  "--sd-blue-100": "#A8D1FF",
  "--sd-blue-200": "#66ADFF",
  "--sd-blue-30": "rgba(0, 112, 245, 0.3)",
  "--sd-blue-300": "#0070F5",
  "--sd-blue-400": "#0063DB",
  "--sd-blue-50": "#EBF4FF",
  "--sd-blue-500": "#0063DB",
  "--sd-blue-75": "#CCE5FF",
  "--sd-dark-100": "#8F949E",
  "--sd-dark-200": "#6A707C",
  "--sd-dark-30": "rgba(143, 148, 158, 0.3)",
  "--sd-dark-300": "#5B6371",
  "--sd-dark-400": "#323C4E",
  "--sd-dark-450": "#222F44",
  "--sd-dark-50": "rgba(25, 35, 52, 0.5)",
  "--sd-dark-500": "#192334",
  "--sd-green-100": "#90EAAE",
  "--sd-green-200": "#5DDA87",
  "--sd-green-30": "rgba(3, 135, 47, 0.3)",
  "--sd-green-300": "#03872F",
  "--sd-green-400": "#1E8F46",
  "--sd-green-50": "#ECF9EF",
  "--sd-green-500": "#007A29",
  "--sd-green-75": "#C8F4D1",
  "--sd-grey-100": "#8F949E",
  "--sd-grey-200": "#6A707C",
  "--sd-grey-300": "#5B6371",
  "--sd-grey-400": "#323C4E",
  "--sd-grey-450": "#222F44",
  "--sd-grey-500": "#192334",
  "--sd-purple-100": "#CBC8EE",
  "--sd-purple-200": "#A7A1E8",
  "--sd-purple-300": "#6559CF",
  "--sd-purple-400": "#473ABB",
  "--sd-purple-50": "#EFEEFC",
  "--sd-purple-500": "#473ABB",
  "--sd-purple-75": "#DCDBF5",
  "--sd-red-10": "rgba(195, 25, 9, 0.1)",
  "--sd-red-100": "#FDC2BA",
  "--sd-red-200": "#FE988B",
  "--sd-red-30": "rgba(229, 35, 13, 0.3)",
  "--sd-red-300": "#E5230D",
  "--sd-red-300-aplha-20": "rgba(229, 35, 13, 0.2)",
  "--sd-red-400": "#D9210D",
  "--sd-red-50": "#FFEDEB",
  "--sd-red-500": "#C31909",
  "--sd-red-75": "#FDD9D3",
  "--sd-silver-100": "#F6F7F8",
  "--sd-silver-200": "#F3F5F8",
  "--sd-silver-30": "rgba(225, 229, 234, 0.3)",
  "--sd-silver-300": "#E8ECF0",
  "--sd-silver-400": "#E1E5EA",
  "--sd-silver-400-alpha-30": "rgba(225, 229, 234, 0.3)",
  "--sd-silver-500": "#C4CDD5",
  "--sd-teal-100": "#91E3F8",
  "--sd-teal-200": "#61D3EF",
  "--sd-teal-300": "#007EAB",
  "--sd-teal-400": "#008DB8",
  "--sd-teal-50": "#E3F6FC",
  "--sd-teal-500": "#00678A",
  "--sd-teal-75": "#BEEDF9",
  "--sd-transparent": "rgba(0, 0, 0, 0)",
  "--sd-white": "#fff",
  "--sd-white-08": "rgba(255, 255, 255, 0.08)",
  "--sd-white-10": "rgba(255, 255, 255, 0.1)",
  "--sd-white-20": "rgba(255, 255, 255, 0.2)",
  "--sd-white-40": "rgba(255, 255, 255, 0.4)",
  "--sd-white-50": "rgba(255, 255, 255, 0.5)",
  "--sd-yellow-100": "#FFE494",
  "--sd-yellow-200": "#FFDC6B",
  "--sd-yellow-300": "#E8671C",
  "--sd-yellow-400": "#FFA91F",
  "--sd-yellow-50": "#FFF7DC",
  "--sd-yellow-500": "#B84807",
  "--sd-yellow-75": "#FFF1C2",
}
`;
